--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1102,4 +1102,12 @@
     <string name="qs_blur_alpha_title">Blur alpha</string>
     <string name="qs_blur_alpha_summary">Sets the blur transparency</string>
 
+    <!-- FOD pressed state behavior -->
+    <string name="fod_pressed_state_title">FOD pressed state behavior</string>
+    <string name="fod_pressed_state_summary">Choose the appropriate pressed state behavior for your device</string>
+    <string name="fod_pressed_state_footer">Icons/colors may vary depending on which device you are using.</string>
+    <string name="fod_pressed_state_icon">Icon (usually Cyan)</string>
+    <string name="fod_pressed_state_icon_white">Icon (White)</string>
+    <string name="fod_pressed_state_solid_color">Solid color (usually Green)</string>
+
 </resources>
