--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -103,6 +103,18 @@
         android:summary="@string/fod_wallpaper_color_summary"
         android:defaultValue="false" />
 
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="fod_pressed_state"
+        android:dialogTitle="@string/fod_pressed_state_title"
+        android:title="@string/fod_pressed_state_title"
+        android:summary="@string/fod_pressed_state_summary"
+        android:entries="@array/fod_pressed_state_entries"
+        android:entryValues="@array/fod_pressed_state_values"
+        android:defaultValue="0" />
+
+    <Preference
+        android:summary="@string/fod_pressed_state_footer" />
+
     </PreferenceCategory>
 
     <!-- Lockscreen Charging -->
