--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -27,31 +27,45 @@
     <!-- LockScreen Clocks -->
     <PreferenceCategory
         android:key="lockscreen_clock_category"
-        android:title="@string/lockscreen_clockdate_category">
+        android:title="@string/lockscreen_clockdate_category"
+        android:icon="@drawable/ic_clock">
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_clock"
+        android:title="@string/lockscreen_clock_show_title"
+        android:summaryOn="@string/lockscreen_clock_summary_on"
+        android:summaryOff="@string/lockscreen_clock_summary_off"
+        android:defaultValue="true" />
 
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="lockscreen_clock_selection"
-        android:icon="@drawable/ic_clock"
         android:title="@string/lockscreen_clock_title"
         android:dialogTitle="@string/lockscreen_clock_dialog_title"
         android:entries="@array/lockscreen_clock_selection_entries"
         android:entryValues="@array/lockscreen_clock_selection_values"
+        android:dependency="lockscreen_clock"
         android:defaultValue="2" />
 
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="lock_clock_font_style"
-        android:icon="@drawable/ic_clock"
         android:title="@string/clock_font_style_title"
         android:entries="@array/font_style_entries"
         android:entryValues="@array/font_style_values"
+        android:dependency="lockscreen_clock"
         android:defaultValue="4" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_info"
+        android:title="@string/lockscreen_info_title"
+        android:summary="@string/lockscreen_info_summary"
+        android:defaultValue="true" />
 
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="lock_date_font_style"
-        android:icon="@drawable/ic_clock"
         android:title="@string/date_font_style_title"
         android:entries="@array/font_style_entries"
         android:entryValues="@array/font_style_values"
+        android:dependency="lockscreen_info"
         android:defaultValue="14" />
 
     </PreferenceCategory>
@@ -87,18 +101,17 @@
     <!-- FOD icon picker -->
     <PreferenceCategory
         android:key="fod_icon_picker"
-        android:title="@string/fod_icon_picker_title" >
+        android:title="@string/fod_icon_picker_title" 
+        android:icon="@drawable/ic_force_fp_authentication" >
 
     <Preference
         android:key="fod_icon_picker_category"
-        android:icon="@drawable/ic_force_fp_authentication"
         android:title="@string/fod_icon_picker_title"
         android:summary="@string/fod_icon_picker_summary"
         android:fragment="com.blissroms.blissify.fragments.lockscreen.FODIconPickerFragment" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="fod_icon_wallpaper_color"
-        android:icon="@drawable/ic_force_fp_authentication"
         android:title="@string/fod_wallpaper_color"
         android:summary="@string/fod_wallpaper_color_summary"
         android:defaultValue="false" />
