--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -89,6 +89,17 @@
             android:entryValues="@array/ambient_notification_light_timeout_values"
             android:dependency="ambient_notification_light_enabled" />
 
+        <com.bliss.support.preferences.SystemSettingSeekBarPreference
+            android:key="ambient_light_repeat_count"
+            android:title="@string/pulse_ambient_light_repeat_count_title"
+            android:summary="@string/pulse_ambient_light_repeat_count_summary"
+            android:persistent="false"
+            android:defaultValue="0"
+            android:max="10"
+            settings:min="0"
+            settings:interval="1"
+            android:dependency="pulse_ambient_light" />
+
         <SwitchPreference
             android:key="ambient_notification_light_accent"
             android:title="@string/ambient_notification_light_accent_title"
