Add an option to pulse edge light for all doze triggers [2/2]
Change-Id: I8a117762c75b58c186d9108384a5be5b94b1eb97
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -42,6 +42,13 @@
             android:defaultValue="false" />
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="pulse_ambient_light_pulse_for_all"
+            android:title="@string/pulse_ambient_light_pulse_for_all_title"
+            android:summary="@string/pulse_ambient_light_pulse_for_all_summary"
+            android:dependency="pulse_ambient_light"
+            android:defaultValue="false" />
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="ambient_notification_light_enabled"
             android:title="@string/ambient_notification_light_enabled_title"
             android:summary="@string/ambient_notification_light_enabled_summary"
