--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -88,6 +88,12 @@
         android:entryValues="@array/qs_brightness_slider_values"
         android:defaultValue="1" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="brightness_slider_qs_unexpanded"
+        android:title="@string/brightness_slider_qs_unexpanded"
+        android:summary="@string/brightness_slider_qs_unexpanded_summary"
+        android:defaultValue="false" />
+
     <lineageos.preference.LineageSecureSettingSwitchPreference
         android:key="qs_show_auto_brightness"
         android:title="@string/brightness_icon_title"
