Introduce Adjustable Blur Intensity [2/2]
Change-Id: Iafb12c621c493ece69aa1329fdc005aa38bbaf11

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1101,6 +1101,8 @@
     <string name="blur_quicksettings_subtitle">blurs darkened background behind quick settings</string>
     <string name="qs_blur_alpha_title">Blur alpha</string>
     <string name="qs_blur_alpha_summary">Sets the blur transparency</string>
+    <string name="qs_blur_intensity_title">Blur intensity</string>
+    <string name="qs_blur_intensity_summary">Sets the blur intensity/radius</string>
 
     <!-- FOD pressed state behavior -->
     <string name="fod_pressed_state_title">FOD pressed state behavior</string>
