--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -185,8 +185,18 @@
        android:summary="@string/qs_blur_alpha_summary"
        android:max="100"
        settings:min="1"
-        android:defaultValue="100"
+       android:defaultValue="100"
        settings:units="%"
+       android:dependency="qs_blur" />
+
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+       android:key="qs_blur_intensity"
+       android:title="@string/qs_blur_intensity_title"
+       android:summary="@string/qs_blur_intensity_summary"
+       android:max="100"
+       settings:min="1"
+       settings:units="%"
+       android:persistent="false"
        android:dependency="qs_blur" />
 
     </PreferenceCategory>
