Pulse and Ambient notification bars [2/2]
spezi77 edits:
-To update our old preference, we have taken parts of this commit: https://github.com/omnirom/android_packages_apps_OmniGears/commit/ed44b03d74200b99d2eb6cdd182b39629bb0e4a7
-Updated some strings for our needs

Change-Id: I602505e9dba65d922347cb2636484fa2d8f0f9f3
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -41,6 +41,13 @@
             android:summary="@string/pulse_ambient_light_summary"
             android:defaultValue="false" />
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="ambient_notification_light_enabled"
+            android:title="@string/ambient_notification_light_enabled_title"
+            android:summary="@string/ambient_notification_light_enabled_summary"
+            android:dependency="pulse_ambient_light"
+            android:defaultValue="false" />
+
         <com.bliss.support.colorpicker.ColorPickerPreference
             android:key="pulse_ambient_light_color"
             android:title="@string/pulse_ambient_light_color_title"
