--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2019 The BlissRoms Project
@@ -896,6 +897,8 @@
     <string name="pulse_ambient_auto_color_summary">Sets edge light color to the primary color of wallpaper</string>
     <string name="pulse_ambient_light_duration_title">Duration</string>
     <string name="pulse_ambient_light_duration_summary">Sets the ambient light animation duration</string>
+    <string name="ambient_notification_light_enabled_title">Show edge lighting on AoD</string>
+    <string name="ambient_notification_light_enabled_summary">Show edge lighting on AoD on new notification</string>
 
     <!-- Hide Apps from Recents -->
     <string name="hafr_category_title">HAFR</string>
