Edge light: Allow to set either an accent color or a custom color.
Also update the edge light preview if accent color is used

Change-Id: I3bb7f5cc57d0a9df84a59e9709cae3700e987077
Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -81,10 +81,11 @@
             settings:interval="1"
             android:dependency="pulse_ambient_light" />
 
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
+        <SwitchPreference
             android:key="ambient_notification_light_accent"
             android:title="@string/ambient_notification_light_accent_title"
             android:summary="@string/ambient_notification_light_accent_summary"
+            android:persistent="false"
             android:dependency="pulse_ambient_light"
             android:defaultValue="false" />
     </PreferenceCategory>
