--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1059,6 +1059,8 @@
     <string name="lockscreen_clock_selection_sammy_accent_min">Sammy accent minute</string>
     <string name="lockscreen_clock_selection_sammy_accent_hour">Sammy accent hour</string>
     <string name="lockscreen_clock_selection_sammy_accent_alt">Sammy accent(darker hour)</string>
+    <string name="lockscreen_clock_selection_text">Text (Android 9)</string>
+    <string name="lockscreen_clock_selection_text_alt">Text (Android 10)</string>
 
     <!-- lockscreen clock and date font style -->
     <string name="lockscreen_clock_category">Clock Options</string>
@@ -1543,4 +1545,14 @@
     <string name="dashboard_suggestions_title">Dashboard suggestions</string>
     <string name="summary_dashboard_suggestions_enabled">Dashboard suggestions are enabled</string>
     <string name="summary_dashboard_suggestions_disabled">Dashboard suggestions are disabled</string>
+
+    <!-- Text Clock -->
+    <string name="text_clock_customizations">Text Clock</string>
+    <string name="text_clock_alignment">Alignment</string>
+    <string name="text_clock_left">Left</string>
+    <string name="text_clock_center">Center</string>
+    <string name="text_clock_right">Right</string>
+    <string name="text_clock_left_right">Left-Right</string>
+    <string name="text_clock_right_left">Right-Left</string>
+    <string name="text_clock_padding">Edge Padding</string>
 </resources>
