Custom Text Clock Customizations [2/2]
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>
Change-Id: I763f5a9cc083f1388bf21eb95b14aa386cee65b4

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -76,6 +76,29 @@
 
     </PreferenceCategory>
 
+    <!-- Text clock customization -->
+    <PreferenceCategory
+        android:key="text_clock_customizations"
+        android:title="@string/text_clock_customizations" >
+
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="text_clock_alignment"
+            android:title="@string/text_clock_alignment"
+            android:dialogTitle="@string/text_clock_alignment"
+            android:entries="@array/text_clock_entries"
+            android:entryValues="@array/text_clock_values"
+            android:defaultValue="0" />
+
+        <com.bliss.support.preferences.SystemSettingSeekBarPreference
+            android:key="text_clock_padding"
+            android:title="@string/text_clock_padding"
+            android:max="100"
+            android:min="0"
+            android:dependency="text_clock_alignment"
+            ionionizer:units="dp"
+            android:defaultValue="55" />
+    </PreferenceCategory>
+
     <!-- LockScreen Date -->
     <PreferenceCategory
         android:key="lockscreen_date_category"
