Blissify: Add option to hide lockscreen date [2/2]
Change-Id: I8b0f911787ddcf0ef71e87b5b00fb7b76d014107

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -46,6 +46,12 @@
         android:entryValues="@array/font_style_values"
         android:defaultValue="4" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_date_hide"
+        android:title="@string/lockscreen_date_hide_title"
+        android:summary="@string/lockscreen_date_hide_summary"
+        android:defaultValue="false" />
+
     <com.bliss.support.preferences.SystemSettingListPreference
         android:key="lockscreen_date_selection"
         android:title="@string/lockscreen_date_selection_title"
