--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1203,4 +1203,22 @@
         <item>7</item>
         <item>9</item>
     </string-array>
+
+    <string-array name="ambient_notification_light_timeout_entries" translatable="false">
+        <item>@string/entry_infinite</item>
+        <item>@string/entry_five_minute</item>
+        <item>@string/entry_ten_minute</item>
+        <item>@string/entry_fifteen_minute</item>
+        <item>@string/entry_thirty_minute</item>
+        <item>@string/entry_sixty_minute</item>
+    </string-array>
+
+    <string-array name="ambient_notification_light_timeout_values" translatable="false">
+        <item>0</item>
+        <item>300</item>
+        <item>600</item>
+        <item>900</item>
+        <item>1800</item>
+        <item>3600</item>
+    </string-array>
 </resources>
