Blissify: add aod notification pulse timeout option [2/2]
Change-Id: I28f92de6db18e2031856d598d4288ece89c32ee1

--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -99,6 +99,14 @@
             settings:interval="1"
             android:dependency="pulse_ambient_light" />
 
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="ambient_notification_light_timeout"
+            android:title="@string/ambient_notification_light_timeout_title"
+            android:persistent="false"
+            android:entries="@array/ambient_notification_light_timeout_entries"
+            android:entryValues="@array/ambient_notification_light_timeout_values"
+            android:dependency="ambient_notification_light_enabled" />
+
         <SwitchPreference
             android:key="ambient_notification_light_accent"
             android:title="@string/ambient_notification_light_accent_title"
