Blissify: Add MIUI 11 VoLTE icon [2/2]
Change-Id: Id6dfd30b305cd398a872a5da97fe0320eb04f370

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -892,6 +892,7 @@
         <item>@string/status_bar_volte_style_6</item>
         <item>@string/status_bar_volte_style_7</item>
         <item>@string/status_bar_volte_style_8</item>
+        <item>@string/status_bar_volte_style_9</item>
     </string-array>
 
     <string-array name="status_bar_volte_values" translatable="false">
@@ -904,6 +905,7 @@
         <item>6</item>
         <item>7</item>
         <item>8</item>
+        <item>9</item>
     </string-array>
 
     <!-- Lockscreen clock styles -->
