Blissify: Add Pixel Gestures Sub Category
- Required for Pixel Gestures

Change-Id: I7fd9f9a696b0657d3a91a76f6cb7e284e3a0b71b
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/xml/blissify_gestures.xml
+++ b/res/xml/blissify_gestures.xml
@@ -46,4 +46,11 @@
         android:summary="@string/three_finger_gesture_summary"
         android:defaultValue="false" />
 
+      <!-- Pixel Gestures -->
+      <Preference
+          android:key="pixel_category"
+          android:title="@string/blissify_pixel_gestures_title"
+          android:fragment="com.blissroms.blissify.fragments.gestures.PixelGestures"
+          android:icon="@drawable/ic_blissify_gestures"/>
+
 </PreferenceScreen>
