--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -28,6 +28,7 @@
     <string name="blissify_misc_title">More</string>
     <string name="blissify_lockscreen_title">Lockscreen</string>
     <string name="blissify_gestures_title">Gestures</string>
+    <string name="blissify_pixel_gestures_title">Pixel Gestures</string>
     <string name="blissify_notifications_title">Notifications</string>
     <string name="system_animation_category">System</string>
     <string name="misc_animation_title">Misc</string>
