lock date size [2/2]
Change-Id: I0f45b8ba61fba6c26adea2f21dade4b779f4ff0e

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1142,4 +1142,7 @@
     <string name="qs_system_info_gpu_clock">GPU frequency</string>
     <string name="qs_system_info_gpu_busy">GPU utilization</string>
 
+    <!-- Lockscreen clock font size -->
+    <string name="lock_date_font_size_title">Date font size</string>
+
 </resources>
