--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -26,13 +26,6 @@
         android:key="bliss_header"
         android:layout="@layout/buttons_header" />
 
-    <SwitchPreference
-        android:key="disable_nav_keys"
-        android:icon="@drawable/ic_nav_buttons"
-        android:title="@string/disable_navkeys_title"
-        android:summary="@string/disable_navkeys_summary"
-        android:defaultValue="false" />
-
     <com.blissroms.blissify.fragments.buttons.ButtonBacklightBrightness
         android:key="button_backlight"
         android:title="@string/button_backlight_title"
@@ -41,24 +34,42 @@
 
     <PreferenceCategory
         android:key="navigation_bar_category"
+        android:icon="@drawable/ic_nav_buttons"
         android:title="@string/navigation_bar_category" >
+
+        <SwitchPreference
+            android:key="disable_nav_keys"
+            android:title="@string/disable_navkeys_title"
+            android:summary="@string/disable_navkeys_summary"
+            android:defaultValue="false" />
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="navigation_bar_menu_arrow_keys"
-            android:icon="@drawable/ic_nav_buttons"
             android:title="@string/navigation_bar_arrow_keys_title"
             android:summary="@string/navigation_bar_arrow_keys_summary"
             android:defaultValue="false" />
 
-       <com.bliss.support.preferences.SecureSettingSwitchPreference
+     </PreferenceCategory>
+
+     <PreferenceCategory
+        android:key="invert_layout_category"
+        android:icon="@drawable/ic_invert"
+        android:title="@string/navigation_bar_invert_layout_title" >
+
+        <com.bliss.support.preferences.SecureSettingSwitchPreference
             android:key="navbar_inverse_layout"
-            android:icon="@drawable/ic_nav_buttons"
             android:title="@string/navigation_bar_invert_layout_title"
             android:defaultValue="false" />
 
+     </PreferenceCategory>
+
+     <PreferenceCategory
+        android:key="nav_bar_button_actions"
+        android:icon="@drawable/ic_nav_buttons"
+        android:title="@string/navigation_bar_options_category" >
+
         <ListPreference
             android:key="navigation_home_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/navigation_bar_home_long_press_title"
             android:title="@string/navigation_bar_home_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -67,7 +78,6 @@
 
         <ListPreference
             android:key="navigation_home_double_tap"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/navigation_bar_home_double_tap_title"
             android:title="@string/navigation_bar_home_double_tap_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -76,7 +86,6 @@
 
         <ListPreference
             android:key="navigation_app_switch_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/navigation_bar_app_switch_long_press_title"
             android:title="@string/navigation_bar_app_switch_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -87,24 +96,35 @@
 
     <PreferenceCategory
         android:key="power_key"
+        android:icon="@drawable/ic_power"
         android:title="@string/hardware_keys_power_key_title" >
 
         <PreferenceScreen
             android:key="power_menu"
-            android:icon="@drawable/ic_power"
             android:title="@string/power_menu_title"
             android:fragment="com.blissroms.blissify.fragments.buttons.PowerMenuActions" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="power_call_end"
+        android:icon="@drawable/ic_call_end"
+        android:title="@string/power_end_call_title" >
 
         <SwitchPreference
             android:key="power_end_call"
-            android:icon="@drawable/ic_call_options"
             android:title="@string/power_end_call_title"
             android:summary="@string/power_end_call_summary"
             android:persistent="false"/>
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="power_torch"
+        android:icon="@drawable/ic_flashlight"
+        android:title="@string/torch_long_press_power_gesture_title" >
+
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="torch_long_press_power_gesture"
-            android:icon="@drawable/ic_power"
             android:title="@string/torch_long_press_power_gesture_title"
             android:summary="@string/torch_long_press_power_gesture_desc"
             android:defaultValue="false"
@@ -112,7 +132,6 @@
 
         <ListPreference
             android:key="torch_long_press_power_timeout"
-            android:icon="@drawable/ic_power"
             android:dialogTitle="@string/torch_long_press_power_timeout_title"
             android:title="@string/torch_long_press_power_timeout_title"
             android:entries="@array/torch_long_press_power_timeout_entries"
@@ -124,24 +143,22 @@
 
     <PreferenceCategory
         android:key="home_key"
-        android:title="@string/hardware_keys_home_key_title" >
+        android:title="@string/hardware_keys_home_key_title" 
+        android:icon="@drawable/ic_hardware_keys">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="home_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="true" />
 
         <SwitchPreference
             android:key="home_answer_call"
-            android:icon="@drawable/ic_call_options"
             android:title="@string/home_answer_call_title"
             android:summary="@string/home_answer_call_summary"
             android:persistent="false"/>
 
         <ListPreference
             android:key="hardware_keys_home_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -150,7 +167,6 @@
 
         <ListPreference
             android:key="hardware_keys_home_double_tap"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_double_tap_title"
             android:title="@string/hardware_keys_double_tap_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -161,17 +177,16 @@
 
     <PreferenceCategory
         android:key="back_key"
-        android:title="@string/hardware_keys_back_key_title" >
+        android:title="@string/hardware_keys_back_key_title"
+        android:icon="@drawable/ic_hardware_keys">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="back_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_back_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -181,17 +196,16 @@
 
     <PreferenceCategory
         android:key="menu_key"
-        android:title="@string/hardware_keys_menu_key_title" >
+        android:title="@string/hardware_keys_menu_key_title"
+        android:icon="@drawable/ic_prevent_accidental_wakeup">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="menu_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_menu_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -200,7 +214,6 @@
 
         <ListPreference
             android:key="hardware_keys_menu_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -211,17 +224,16 @@
 
     <PreferenceCategory
         android:key="assist_key"
-        android:title="@string/hardware_keys_assist_key_title" >
+        android:title="@string/hardware_keys_assist_key_title"
+        android:icon="@drawable/ic_hardware_keys">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="assist_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_assist_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -230,7 +242,6 @@
 
         <ListPreference
             android:key="hardware_keys_assist_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -245,13 +256,11 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="app_switch_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_app_switch_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -260,7 +269,6 @@
 
         <ListPreference
             android:key="hardware_keys_app_switch_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -271,11 +279,11 @@
 
     <PreferenceCategory
         android:key="camera_key"
-        android:title="@string/hardware_keys_camera_key_title">
+        android:title="@string/hardware_keys_camera_key_title"
+        android:icon="@drawable/ic_camera">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="camera_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
@@ -295,63 +303,82 @@
 
     <PreferenceCategory
         android:key="volume_keys"
-        android:title="@string/hardware_keys_volume_keys_title" >
+        android:title="@string/hardware_keys_volume_keys_title"
+        android:icon="@drawable/ic_volume">
 
         <!-- Audio Panel view  -->
         <PreferenceScreen
             android:key="volume_panel"
-            android:icon="@drawable/ic_volume"
             android:title="@string/audio_panel_view_title"
             android:summary="@string/audio_panel_view_summary"
             android:fragment="com.blissroms.blissify.fragments.buttons.VolumePanel" />
 
+        <SwitchPreference
+            android:key="swap_volume_buttons"
+            android:title="@string/swap_volume_buttons_title"
+            android:summary="@string/swap_volume_buttons_summary" />
+
+        <SwitchPreference
+            android:key="volume_panel_on_left"
+            android:title="@string/volume_panel_on_left_title"
+            android:summary="@string/volume_panel_on_left_summary" />
+
         <Preference
             android:key="vol_steps"
-            android:icon="@drawable/ic_volume"
             android:title="@string/volume_steps_title"
             android:summary="@string/volume_steps_summary"
             android:fragment="com.blissroms.blissify.fragments.buttons.VolumeSteps" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="volume_wake"
+        android:title="@string/button_wake_title"
+        android:icon="@drawable/ic_prevent_accidental_wakeup">
+
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volume_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="volume_answer"
+        android:title="@string/volume_answer_call_title"
+        android:icon="@drawable/ic_call_answer">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volume_answer_call"
-            android:icon="@drawable/ic_call_options"
             android:title="@string/volume_answer_call_title"
             android:summary="@string/volume_answer_call_summary"
             android:defaultValue="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="volume_music"
+        android:title="@string/volbtn_music_controls_title"
+        android:icon="@drawable/ic_music_control">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volbtn_music_controls"
-            android:icon="@drawable/ic_music_visualizer"
             android:title="@string/volbtn_music_controls_title"
             android:summary="@string/volbtn_music_controls_summary"
             android:defaultValue="true" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="volume_cursor"
+        android:title="@string/volume_options_title"
+        android:icon="@drawable/ic_keyboard_cursor">
 
         <ListPreference
             android:key="volume_key_cursor_control"
-            android:icon="@drawable/ic_volume"
             android:dialogTitle="@string/volbtn_cursor_control_title"
             android:title="@string/volbtn_cursor_control_title"
             android:entries="@array/volbtn_cursor_control_entries"
             android:entryValues="@array/volbtn_cursor_control_values"
             android:persistent="false" />
 
-        <SwitchPreference
-            android:key="swap_volume_buttons"
-            android:icon="@drawable/ic_volume"
-            android:title="@string/swap_volume_buttons_title"
-            android:summary="@string/swap_volume_buttons_summary" />
-
-        <SwitchPreference
-            android:key="volume_panel_on_left"
-            android:icon="@drawable/ic_volume"
-            android:title="@string/volume_panel_on_left_title"
-            android:summary="@string/volume_panel_on_left_summary" />
     </PreferenceCategory>
 
     <PreferenceCategory
