--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -50,7 +50,7 @@
     <!-- Status bar Battery -->
     <PreferenceCategory
         android:key="status_bar_battery_key"
-        android:icon="@drawable/ic_battery_bar"
+        android:icon="@drawable/ic_battery"
         android:title="@string/status_bar_battery_title">
 
         <com.bliss.support.preferences.SystemSettingListPreference
@@ -136,7 +136,7 @@
     <!-- Network Traffic -->
     <PreferenceCategory
         android:title="@string/network_traffic_settings_title"
-        android:icon="@drawable/ic_network">
+        android:icon="@drawable/ic_network_monitor">
 
       <PreferenceScreen
           android:key="network_traffic_settings"
@@ -149,7 +149,7 @@
     <!-- Brightness -->
     <PreferenceCategory
         android:title="@string/status_bar_brightness_category"
-        android:icon="@drawable/ic_blissify_misc">
+        android:icon="@drawable/ic_brightness_control">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
