--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -52,6 +52,9 @@
     <string name="fp_misc_title">Fingerprint</string>
     <string name="qs_header_category">Quick Settings</string>
     <string name="lockscreen_items_category">Lockscreen Items</string>
+    <string name="lockscreen_shortcuts_category_title">Lockscreen Shortcuts</string>
+    <string name="lockscreen_media_blur_category">Lockscreen Media Blur</string>
+    <string name="lockscreen_wake_fp_category">Wake Options</string>
 
     <!-- AOKP custom system animations -->
     <string name="animation_title">Animations</string>
@@ -987,6 +990,7 @@
 
     <!-- QS category -->
     <string name="qs_category">Quick settings</string>
+    <string name="oos_clear_all_button">OOS Clear All</string>
     <string name="enable_clear_all_button">Replace clear all text with nice button</string>
     <string name="enable_clear_all_button_summary">Show clear all notifications button in quick settings instead of default text one</string>
 
